--- a/package.json
+++ b/package.json
@@ -28,13 +28,24 @@
     "./dist"
   ],
   "scripts": {
-    "format": "prettier --write ./src/**",
-    "build": "vite build && tsc --emitDeclarationOnly"
+    "format": "prettier --write ./src/** ./.storybook/** ./stories/**",
+    "build": "vite build && tsc --emitDeclarationOnly",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-vite": "^0.3.0",
+    "@storybook/react": "^6.5.15",
+    "@storybook/testing-library": "^0.0.13",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "babel-loader": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.4",
@@ -43,5 +54,6 @@
   "peerDependencies": {
     "react": "^16.8.0  || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
-  }
+  },
+  "dependencies": {}
 }
