--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,31 @@
 {
-  "include": ["src", "stories"],
+  "include": ["src"],
   "compilerOptions": {
-    "module": "ESNext",
-    "lib": ["ESNext", "DOM"],
-    "target": "ESNext",
-    "declaration": true,
-    "sourceMap": true,
-    "rootDir": ".",
-    "moduleResolution": "node",
-    "outDir": "dist/",
-    "strict": true,
-    "jsx": "react-jsx",
     "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "declarationMap": false,
     "emitDeclarationOnly": true,
     "esModuleInterop": true,
     "isolatedModules": true,
+    "jsx": "react-jsx",
+    "lib": ["ESNext", "DOM"],
+    "module": "ESNext",
+    "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
+    "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "outDir": "dist/",
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "rootDir": ".",
+    "skipLibCheck": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "ESNext"
   }
 }
